MODCLUSTER-647 Upgrade jboss-logging-processor to 2.1.0.Final (for JDK8 or higher) * move <modules> from default profile to main project pom * remove build plugin override for jdk9+