@@ -53,6 +53,14 @@
         </repository>
     </repositories>
 
+    <modules>
+        <module>core</module>
+        <module>container</module>
+        <module>load-spi</module>
+        <module>demo</module>
+        <module>dist</module>
+    </modules>
+
     <properties>
         <!-- Override default 1.8 target/source in jboss-parent -->
         <maven.compiler.target>1.7</maven.compiler.target>
@@ -60,7 +68,8 @@
 
         <!-- Dependency versions -->
         <version.jboss-logging>3.3.1.Final</version.jboss-logging>
-        <version.jboss-logging-processor>2.0.2.Final</version.jboss-logging-processor>
+        <version.jboss-logging-processor>2.1.0.Final</version.jboss-logging-processor>
+        <version.jboss-logging-processor.jdk7>2.0.2.Final</version.jboss-logging-processor.jdk7>
         <version.tomcat7>7.0.84</version.tomcat7>
         <version.tomcat8>8.0.49</version.tomcat8>
         <version.tomcat85>8.5.27</version.tomcat85>
@@ -275,49 +284,6 @@
 
     <profiles>
         <profile>
-            <id>default</id>
-            <activation>
-                <activeByDefault>true</activeByDefault>
-            </activation>
-            <modules>
-                <module>core</module>
-                <module>container</module>
-                <module>load-spi</module>
-                <module>demo</module>
-                <module>dist</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <modules>
-                <module>core</module>
-                <module>container</module>
-                <module>load-spi</module>
-                <module>demo</module>
-                <module>dist</module>
-            </modules>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-compiler-plugin</artifactId>
-                        <version>${version.compiler.plugin}</version>
-                        <configuration>
-                            <!-- Fork is needed so compiler args can be used -->
-                            <fork>true</fork>
-                            <compilerArgs>
-                                <arg>-J--add-modules</arg>
-                                <arg>-Jjava.xml.ws.annotation</arg>
-                            </compilerArgs>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>TC7</id>
             <modules>
                 <module>core</module>
@@ -363,6 +329,15 @@
                 <module>dist</module>
                 <module>docs</module>
             </modules>
+        </profile>
+        <profile>
+            <id>jdk7</id>
+            <activation>
+                <jdk>1.7</jdk>
+            </activation>
+            <properties>
+                <version.jboss-logging-processor>${version.jboss-logging-processor.jdk7}</version.jboss-logging-processor>
+            </properties>
         </profile>
     </profiles>
 </project>
